Generate all methods
